@@ -1,0 +1,17 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  i18n_domain="eea">
+
+  <permission
+    id="eea.epub.customize"
+    title="Can customize ePub"
+    description="Can customize ePub export"
+    />
+
+  <permission
+    id="eea.epub.download"
+    title="Can download ePub"
+    description="Can download ePub"
+    />
+
+</configure>
