@@ -5,10 +5,11 @@
   <object name="download_as_epub" meta_type="CMF Action">
    <property name="title">Download as ePub</property>
    <property name="url_expr">string:$object_url/epub_view</property>
+   <property name="available_expr">object/@@epub.support/can_download</property>
    <property
       name="icon_expr">string:$portal_url/++resource++eea.epub.images/download-epub.png</property>
    <property name="permissions">
-    <element value="Modify portal content"/>
+    <element value="Can download ePub"/>
    </property>
    <property name="visible">True</property>
   </object>
