@@ -1,0 +1,15 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:browser="http://namespaces.zope.org/browser"
+  xmlns:zcml="http://namespaces.zope.org/zcml"
+  i18n_domain="eea">
+
+  <browser:page
+    name="epub.support"
+    for="zope.interface.Interface"
+    class=".support.Support"
+    permission="zope.Public"
+    allowed_interface="eea.converter.interfaces.ISupport"
+    />
+
+</configure>
